Finalize search function, though it does still have bugs.